--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Joe Kitaj",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
     "morgan": "^1.8.1",
