--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.16.1",
     "ejs": "^2.5.5",
     "express": "^4.14.1",
+    "method-override": "^2.3.7",
     "morgan": "^1.8.1",
     "pg-promise": "^5.5.6"
   }
